# ansible-role-growfs

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .talismanrc  .yamllint  LICENSE  Makefile  README.md  devbox.json  pyproject.toml  requirements.txt  requirements.yml
.github/workflows/: lint.yml  main.yml  mirror.yml  molecule.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/: cache.yml  cleanup.yml  converge.yml  destroy.yml  guests.yml  inventory.yml  networking.yml  prepare.yml  reboot.yml  vars.yml  verify.yml
molecule/absolute/: molecule.yml
molecule/centos/: molecule.yml
molecule/common/: cleanup.yml  converge.yml  create.yml  destroy.yml  inventory.yml  kvm.yml  prepare.yml  reboot.yml  vars.yml  verify.yml
molecule/common/templates/: disk.j2.xml  network.j2.xml  pool.j2.xml
molecule/debian/: molecule.yml
molecule/default/: molecule.yml
molecule/ec2/: molecule.yml  requirements.yml
molecule/templates/: vm.xml.j2
molecule/ubuntu/: molecule.yml
roles/: .gitignore
tasks/: lvm.yml  main.yml  static.yml
tasks/metadata/: storage.yml
